@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.6.0 [unreleased]
 
+  Fixed issue in c.f.h.p.HadoopStepGraph where Traps would be ignored if the Flow had no operation ("copy flows").
+
   Updated Janino to 2.7.5.
 
   Added ability to add more meta information about a c.f.Flow, which can be read and used by a c.m.DocumentService.
